# routine-logger-rs

./: Cargo.toml  README.md  app_config.json
routine-logger-web/: Cargo.toml
routine-logger-web/sql/: insert_routine.sql  select_routines.sql
routine-logger-web/sql/routines/: delete_routine.sql  insert_routine.sql
routine-logger-web/src/: main.rs
routine-logger-web/src/routes/: mod.rs  routine_logs.rs  routines.rs
routine-logger-web/src/sql/routine_logs/: delete_log.sql  insert_log.sql  select_logs.sql
routine-logger-web/src/sql/routines/: select_routines.sql  update_routine.sql
routine-logger-web/src_vue/: .env  package-lock.json  package.json  vue.config.js
routine-logger-web/src_vue/src/: App.vue
routine-logger-web/src_vue/src/api/: routine_logs.js  routines.js
routine-logger-web/src_vue/src/router/: index.js
routine-logger-web/src_vue/src/store/: index.js
routine-logger-web/src_vue/src/store/modules/: routine_logs.js  routines.js
routine-logger-web/src_vue/src/utils/: pageTitle.js
routine-logger-web/src_vue/src/views/: Home.vue  Logs.vue
sql/: create_databases.sql  create_tables.sql
