[package]
name = "routine-logger-web"
version = "0.1.0"
authors = ["pirosuke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
env_logger = "0.8.2"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
r2d2_postgres = "0.18.0"
chrono = "0.4.19"

[dependencies.postgres]
version = "0.19"
features = [
    "with-chrono-0_4",
]